// DBML script for Inspection Module schema
// Author: Elena Iurco (Data Futurists)
// Email: elena.iurco@datafuturists.com

// Script created for use with dbdiagram.io


Table ContractorOrganisation {
  ContractorOrganisationID varchar PK
  Name varchar
  ContractorPortal varchar
  Subcontractors text
}

Table WorkClass {
  WorkClassID varchar PK
  WorkClassCode varchar
  WorkClassDescription text
}

Table WorkPriority {
  WorkPriorityID varchar PK
  PriorityCode varchar
  PriorityDescription text
  EffectiveDateTime timestamp
  NumberOfDays int
  Comments text
  RequiredStartDate date
  RequiredCompletionDate date
}

Table TradeCode {
  Code varchar PK
  CustomCode varchar
  CustomName varchar
}

Table RateScheduleItem {
  RateScheduleItemID varchar PK
  M3NHFSORCode varchar
  Quantity decimal
  CustomCode varchar
  CustomName varchar
}

Table WorkOrder {
  WorkOrderID varchar PK
  WorkElementID varchar
  AddressID varchar
  InspectionID varchar
  EscalationID varchar
  TenancyID varchar
  TenantID varchar
  HazardReportID varchar
  WorkClassID varchar
  LocationAlertID varchar
  PersonAlertID varchar
  WorkPriorityID varchar
  ContractorOrganisationID varchar
  DateRaised date
  DateReported date
  PlannedStartDate date
  PlannedFinishDate date
  ActualStartDateTime timestamp
  ActualCompletionDateTime timestamp
  DescriptionOfWork text
  EstimatedCost decimal
  EstimatedLabourHours decimal
  LocationOfRepair varchar
  JobStatusUpdate varchar
  RepairSLABreachFlag varchar
}

Table WorkElement {
  WorkElementID varchar PK
  WorkOrderID varchar
  RateScheduleItemID varchar
  TradeCode varchar
  ServiceChargeSubject varchar
}

Table WorkElementDependency {
  WorkElementID varchar PK
  DependsOnWorkElementID varchar PK
  Type varchar
  Timing varchar
}

Table WorkOrderStatusHistory {
  WorkOrderStatusHistoryID varchar PK
  WorkOrderID varchar
  StatusCode varchar
  UpdatedBy varchar
  Reason text
  ReasonCode varchar
  CreatedDateTime timestamp
  EnteredDateTime timestamp
  ExistedDateTime timestamp
  Comments text
}

Table WorkOrderComplete {
  WorkOrderCompleteID varchar PK
  WorkOrderID varchar
  BillOfMeterialItem varchar
  CompletedWorkElements text
  OperativesUsed text
  JobStatusUpdate varchar
  FollowOnWork varchar
}

Table WorkOrderAccessInformation {
  WorkOrderAccessInformationID varchar PK
  WorkOrderID varchar
  Description varchar
  KeySafe text
}

Table AlertRegardingLocation {
  LocationAlertID varchar PK
  AlertType varchar
  Attachments text
  Comments text
}

Table AlertRegardingPerson {
  PersonAlertID varchar PK
  AlertType varchar
  Comments text
}

Ref: WorkOrder.WorkClassID > WorkClass.WorkClassID
Ref: WorkOrder.WorkPriorityID > WorkPriority.WorkPriorityID
Ref: WorkOrder.ContractorOrganisationID > ContractorOrganisation.ContractorOrganisationID
Ref: WorkElement.WorkOrderID > WorkOrder.WorkOrderID
Ref: WorkElement.RateScheduleItemID > RateScheduleItem.RateScheduleItemID
Ref: WorkElement.TradeCode > TradeCode.Code
Ref: WorkElementDependency.WorkElementID > WorkElement.WorkElementID
Ref: WorkElementDependency.DependsOnWorkElementID > WorkElement.WorkElementID
Ref: WorkOrderStatusHistory.WorkOrderID > WorkOrder.WorkOrderID
Ref: WorkOrderComplete.WorkOrderID > WorkOrder.WorkOrderID
Ref: WorkOrderAccessInformation.WorkOrderID > WorkOrder.WorkOrderID
Ref: WorkOrder.LocationAlertID > AlertRegardingLocation.LocationAlertID
Ref: WorkOrder.PersonAlertID > AlertRegardingPerson.PersonAlertID
